-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
-
x86_64
-
linux
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/oops/compressedKlass.inline.hpp:52), pid=752360, tid=752386
# assert(!is_null(v)) failed: narrow klass value can never be zero
#
# JRE version: Java(TM) SE Runtime Environment (26.0+1) (fastdebug build 26-valhalla+1-55)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-valhalla+1-55, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, parallel gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x3ad39f] CompressedKlassPointers::decode_not_null(unsigned int)+0x2af
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.vm.opts=-XX:MaxRAMPercentage=25 -Dtest.boot.jdk=jdk/24/36/bundles/linux-x64/jdk-24_linux-x64_bin.tar.gz/jdk-24 -Djava.io.tmpdir=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/tmp -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=25 -J-Dtest.boot.jdk=jdk/24/36/bundles/linux-x64/jdk-24_linux-x64_bin.tar.gz/jdk-24 -J-Djava.io.tmpdir=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/tmp -Dtest.compiler.opts= -Dtest.java.opts=-XX:+UseParallelGC -XX:+UseNUMA -Dtest.jdk=jdk-26-valhalla+1-55/linux-x64-debug.jdk/jdk-26/fastdebug -Dcompile.jdk=jdk-26-valhalla+1-55/linux-x64-debug.jdk/jdk-26/fastdebug -Dtest.timeout.factor=4.0 -Dtest.nativepath=jdk-26-valhalla+1-55/linux-x64-debug.test/hotspot/jtreg/native -Dtest.root=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg -Dtest.name=vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.java -Dtest.verbose=Verbose[p=BRIEF,f=FULL,e=FULL,t=true,m=false] -Dtest.file=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.java -Dtest.src=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004 -Dtest.src.path=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004:jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase:jdk-26-valhalla+1-55/src.full/open/test/lib -Dtest.classes=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.d -Dtest.class.path=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.d:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/test/lib -Dtest.class.path.prefix=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/test/lib -XX:MaxRAMPercentage=25 -Dtest.boot.jdk=jdk/24/36/bundles/linux-x64/jdk-24_linux-x64_bin.tar.gz/jdk-24 -Djava.io.tmpdir=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/tmp -XX:+UseParallelGC -XX:+UseNUMA -Djava.library.path=jdk-26-valhalla+1-55/linux-x64-debug.test/hotspot/jtreg/native -Xss10m -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI com.sun.javatest.regtest.agent.MainWrapper test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.d/main.0.jta -treeDepth 70 -minLevelSize 10 -maxLevelSize 100 -hierarchyType INTERFACES
AMD EPYC 9J14 96-Core Processor, 12 cores, 23G, Oracle Linux Server release 8.10
Time: Mon Sep 29 10:05:46 2025 UTC elapsed time: 12.952890 seconds (0d 0h 0m 12s)
--------------- T H R E A D ---------------
Current thread (0x00007f1604003c60): WorkerThread "GC Thread#4" [id=752386, stack(0x00007f160c339000,0x00007f160c439000) (1024K)]
Stack: [0x00007f160c339000,0x00007f160c439000], sp=0x00007f160c437b60, free space=1018k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x3ad39f] CompressedKlassPointers::decode_not_null(unsigned int)+0x2af (compressedKlass.inline.hpp:52)
V [libjvm.so+0x192d904] MoveAndUpdateClosure::do_addr(HeapWordImpl**, unsigned long)+0xf4 (psParallelCompact.cpp:2378)
V [libjvm.so+0x1933ec6] PSParallelCompact::fill_region(ParCompactionManager*, MoveAndUpdateClosure&, unsigned long)+0x296 (psParallelCompact.cpp:2238)
V [libjvm.so+0x19345ec] PSParallelCompact::fill_and_update_region(ParCompactionManager*, unsigned long)+0xfc (psParallelCompact.cpp:2259)
V [libjvm.so+0x1921bab] ParCompactionManager::drain_region_stacks()+0x25b (psCompactionManager.cpp:169)
V [libjvm.so+0x19402fb] FillDensePrefixAndCompactionTask::work(unsigned int)+0x3ab (psParallelCompact.cpp:1696)
V [libjvm.so+0x1d8e8a8] WorkerThread::run()+0x88 (workerThread.cpp:69)
V [libjvm.so+0x1c17656] Thread::call_run()+0xb6 (thread.cpp:243)
V [libjvm.so+0x184a018] thread_native_entry(Thread*)+0x128 (os_linux.cpp:868)
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/oops/compressedKlass.inline.hpp:52), pid=752360, tid=752386
# assert(!is_null(v)) failed: narrow klass value can never be zero
#
# JRE version: Java(TM) SE Runtime Environment (26.0+1) (fastdebug build 26-valhalla+1-55)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-valhalla+1-55, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, parallel gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x3ad39f] CompressedKlassPointers::decode_not_null(unsigned int)+0x2af
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.vm.opts=-XX:MaxRAMPercentage=25 -Dtest.boot.jdk=jdk/24/36/bundles/linux-x64/jdk-24_linux-x64_bin.tar.gz/jdk-24 -Djava.io.tmpdir=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/tmp -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=25 -J-Dtest.boot.jdk=jdk/24/36/bundles/linux-x64/jdk-24_linux-x64_bin.tar.gz/jdk-24 -J-Djava.io.tmpdir=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/tmp -Dtest.compiler.opts= -Dtest.java.opts=-XX:+UseParallelGC -XX:+UseNUMA -Dtest.jdk=jdk-26-valhalla+1-55/linux-x64-debug.jdk/jdk-26/fastdebug -Dcompile.jdk=jdk-26-valhalla+1-55/linux-x64-debug.jdk/jdk-26/fastdebug -Dtest.timeout.factor=4.0 -Dtest.nativepath=jdk-26-valhalla+1-55/linux-x64-debug.test/hotspot/jtreg/native -Dtest.root=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg -Dtest.name=vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.java -Dtest.verbose=Verbose[p=BRIEF,f=FULL,e=FULL,t=true,m=false] -Dtest.file=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.java -Dtest.src=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004 -Dtest.src.path=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004:jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase:jdk-26-valhalla+1-55/src.full/open/test/lib -Dtest.classes=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.d -Dtest.class.path=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.d:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/test/lib -Dtest.class.path.prefix=jdk-26-valhalla+1-55/src.full/open/test/hotspot/jtreg/vmTestbase/metaspace/stressHierarchy/stressHierarchy004:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/vmTestbase:test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/classes/test/lib -XX:MaxRAMPercentage=25 -Dtest.boot.jdk=jdk/24/36/bundles/linux-x64/jdk-24_linux-x64_bin.tar.gz/jdk-24 -Djava.io.tmpdir=test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/tmp -XX:+UseParallelGC -XX:+UseNUMA -Djava.library.path=jdk-26-valhalla+1-55/linux-x64-debug.test/hotspot/jtreg/native -Xss10m -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI com.sun.javatest.regtest.agent.MainWrapper test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace/vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.d/main.0.jta -treeDepth 70 -minLevelSize 10 -maxLevelSize 100 -hierarchyType INTERFACES
AMD EPYC 9J14 96-Core Processor, 12 cores, 23G, Oracle Linux Server release 8.10
Time: Mon Sep 29 10:05:46 2025 UTC elapsed time: 12.952890 seconds (0d 0h 0m 12s)
--------------- T H R E A D ---------------
Current thread (0x00007f1604003c60): WorkerThread "GC Thread#4" [id=752386, stack(0x00007f160c339000,0x00007f160c439000) (1024K)]
Stack: [0x00007f160c339000,0x00007f160c439000], sp=0x00007f160c437b60, free space=1018k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x3ad39f] CompressedKlassPointers::decode_not_null(unsigned int)+0x2af (compressedKlass.inline.hpp:52)
V [libjvm.so+0x192d904] MoveAndUpdateClosure::do_addr(HeapWordImpl**, unsigned long)+0xf4 (psParallelCompact.cpp:2378)
V [libjvm.so+0x1933ec6] PSParallelCompact::fill_region(ParCompactionManager*, MoveAndUpdateClosure&, unsigned long)+0x296 (psParallelCompact.cpp:2238)
V [libjvm.so+0x19345ec] PSParallelCompact::fill_and_update_region(ParCompactionManager*, unsigned long)+0xfc (psParallelCompact.cpp:2259)
V [libjvm.so+0x1921bab] ParCompactionManager::drain_region_stacks()+0x25b (psCompactionManager.cpp:169)
V [libjvm.so+0x19402fb] FillDensePrefixAndCompactionTask::work(unsigned int)+0x3ab (psParallelCompact.cpp:1696)
V [libjvm.so+0x1d8e8a8] WorkerThread::run()+0x88 (workerThread.cpp:69)
V [libjvm.so+0x1c17656] Thread::call_run()+0xb6 (thread.cpp:243)
V [libjvm.so+0x184a018] thread_native_entry(Thread*)+0x128 (os_linux.cpp:868)
- duplicates
-
JDK-8368900 [lworld] vmTestbase/metaspace/stressHierarchy/stressHierarchy004/TestDescription.java failing with SIGSEGV
-
- Closed
-
- relates to
-
JDK-8369134 [lworld] We should preserve the markWord for all GCs
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/db38c83f
-
Review(lworld)
openjdk/valhalla/1655