8368875: [lworld] UseParallelGC fails null narrow klass assertion failure